# django-currency-converter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api_parser/: pyproject.toml
api_parser/api_parser/: asgi.py  celery.py  models.py  settings.py  tasks.py  urls.py  wsgi.py
backend/: Dockerfile  conversion_table.py  db.sqlite3  pyproject.toml
backend/backend/: models.py  settings.py  urls.py  views.py
currencyconverter/: db.sqlite3
currencyconverter/currencyconverter/: asgi.py  settings.py  tests.py  urls.py  views.py  wsgi.py
currencyconverter/currencyconverter/templates/: index.html
frontend/: db.sqlite3  pyproject.toml
frontend/frontend/: settings.py  urls.py  views.py
frontend/templates/: index.html
mock_parser/: manage.py  pyproject.toml
mock_parser/mock_parser/: asgi.py  celery.py  models.py  settings.py  tasks.py  urls.py  wsgi.py
