[project]
name = "currency-converter"
version = "0.1.0"
description = "Web service that helps with currency convertion"
authors = [
    {name = "Eduard Kaverinskyi",email = "eduard.kaverinskyi@gmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
pre-commit = "^4.1.0"

