[project]
name = "currency-converter-api-parser"
version = "0.1.0"
description = "[Backend] Web service that helps with currency convertion"
authors = [
    {name = "Eduard Kaverinskyi",email = "eduard.kaverinskyi@gmail.com"}
]
license = {text = "GPLv3"}
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "django-redis (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
pre-commit = "^4.1.0"

