[project]
name = "currency-converter-frontend"
version = "0.1.0"
description = "[Frontend] Web service that helps with currency convertion"
authors = [
    {name = "Eduard Kaverinskyi",email = "eduard.kaverinskyi@gmail.com"}
]
license = {text = "GPLv3"}
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

